@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id 'io.quarkus'
     id 'application'
+    id "io.freefair.lombok" version "8.4"
 }
 
 repositories {
@@ -9,52 +11,47 @@ repositories {
 }
 
 dependencies {
-    // Compile
+    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
+    implementation 'io.quarkus:quarkus-arc'
+    implementation 'io.quarkus:quarkus-resteasy-reactive'
+    implementation 'io.quarkus:quarkus-config-yaml'
     implementation 'io.aeron:aeron-all:1.42.1'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.3'
-    implementation 'org.slf4j:slf4j-api:2.0.9'
-    implementation 'org.slf4j:slf4j-simple:2.0.9'
-    implementation 'org.jetbrains:annotations:24.0.1'
-    implementation 'com.lmax:disruptor:3.4.4'
 
-    // Tests
-    testImplementation(platform('org.junit:junit-bom:5.10.0'))
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
-
-    testImplementation(platform('org.mockito:mockito-bom:5.6.0'))
-    testImplementation 'org.mockito:mockito-core'
-    testImplementation 'org.mockito:mockito-junit-jupiter'
-    testImplementation 'org.awaitility:awaitility:4.2.0'
+    testImplementation 'io.quarkus:quarkus-junit5'
+    testImplementation 'io.quarkus:quarkus-junit5-mockito'
+    testImplementation 'io.rest-assured:rest-assured'
 }
 
 group 'org.realerting'
 version '1.0.0-SNAPSHOT'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_20
-    targetCompatibility = JavaVersion.VERSION_20
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 test {
-    useJUnitPlatform()
-    jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--enable-preview']
+    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
 }
-
 compileJava {
     options.encoding = 'UTF-8'
-    options.compilerArgs << '-parameters' << '--enable-preview'
+    options.compilerArgs << '-parameters'
 }
 
 compileTestJava {
     options.encoding = 'UTF-8'
-    options.compilerArgs << '--enable-preview'
 }
 
-application {
-    mainClass = 'org.realerting.AlertingNodeEntryPoint'
-
-    // Needs to run aeron on JDK 17+
-    // Reference: https://aeroncookbook.com/cookbook-content/aeron-jdk16/
-    applicationDefaultJvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--enable-preview']
+// Needs to run aeron on JDK 17+
+// Reference: https://aeroncookbook.com/cookbook-content/aeron-jdk16/
+quarkus {
+    test {
+        jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
+    }
+    testNative {
+        jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
+    }
+    quarkusDev {
+        jvmArgs = ['--add-opens=java.base/sun.nio.ch=ALL-UNNAMED']
+    }
 }
